<resources>
    <string name="app_name" translatable="false">YouPlay</string>

    <string name="you_play">Play</string>
    <string name="you_search">Search</string>
    <string name="you_history">History</string>
    <string name="you_search_hint">Search music&#8230;</string>
    <string name="you_search_no_result">No results</string>
    <string name="you_playlist">Playlist</string>
    <string name="you_radio">Radio</string>

    <string name="you_pause">Pause</string>
    <string name="you_next">Next</string>
    <string name="you_previous">Previous</string>
    <string name="image_desc">Music image</string>
    <string name="you_downloaded">Cached</string>
    <string name="you_view">views</string>
    <string name="you_download_empty">History Empty</string>

    <string name="you_temp_time" translatable="false">0:00</string>
    <string name="no_internet_connection">There is no internet connection</string>
    <string name="perms_request">Request permissions</string>
    <string name="rationale_ok">OK</string>
    <string name="rationale_cancel">Cancel</string>
    <string name="rationale_dont_ask_again">Don\'t show again</string>
    <string name="headphones">Headphones disconnected</string>
    <string name="no_space">Not enough storage space to create files</string>
    <string name="cant_extract">An error has occurred while downloading</string>
    <string name="files_dont_exist">YouPlay can\'t find files try restarting the app</string>
    <string name="refresh_error">An error has occurred, try to clear some space and restart an app</string>
    <string name="cannot_find_table">An error has occurred while opening a playlist</string>
    <string name="error">An error has occurred</string>

    <string name="songs_language">Song</string>
    <string name="auto_query">auto</string>

    <string name="new_playlist">Create a new playlist</string>
    <string name="text_new">New</string>
    <string name="playlist_name">Enter the name</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_pick">Pick how many song should be played</string>
    <string name="alarm_set">Alarm set</string>
    <string name="alarm_disabled">Alarm disabled</string>

    <string name="now_playing">Add To Now Playing</string>
    <string name="add_queue">Add To Queue</string>
    <string name="delete_song">Delete Song</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="open_youtube">Open with…</string>
    <string name="delete_radio">Delete Radio</string>

    <string name="song_in_queue">Song added to queue</string>
    <string name="song_deleted">Song deleted</string>
    <string name="song_mins">Mins</string>
    <string name="autoplay">autoplay</string>
    <string name="al_latest">Order is already set to latest</string>
    <string name="al_oldest">Order is already set to oldest</string>

    <string name="settings">Settings</string>
    <string name="show_suggestions" translatable="false">Show list</string>
    <string name="current_version">Version</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="clear_done">Search history deleted</string>

    <!--Playlist-->
    <string name="playlist_delete">Delete the playlist</string>
    <string name="playlist_rename">Rename</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="playlist_exists">Playlist already exists</string>
    <string name="playlist_enter_name">Enter the name</string>
    <string name="playlist_added">Song added to playlist</string>
    <string name="playlist_created">Playlist %s created</string>
    <string name="playlist_error">An error occurred while opening playlist %s</string>

    <!--Radio-->
    <string name="radio_bitrate">kbps</string>
    <string name="radio_country">Country</string>
    <string name="radio_deleted">Radio deleted</string>
    <string name="radio_list">List of countries/regions</string>
    <string name="radio_stations">Stations: </string>

    <!--Preferences-->
    <string name="switch_key" translatable="false">Theme</string>
    <string name="switch_theme">Theme</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_navigation">Navigation</string>
    <string name="pref_navigation_summary">When enabled navigation bar won\'t show in play screen</string>
    <string name="switch_summary">Change to dark theme</string>
    <string name="check_download">Download</string>
    <string name="send_email">Support and suggestions</string>
    <string name="email_summary" translatable="false">stipess@youplayandroid.com</string>
    <string name="contribute">Contribute</string>
    <string name="contribute_summary">Help translate YouPlay</string>

    <!--Alert Dialog-->
    <string name="alert_title">Download not available</string>

    <string name="pref_download">Downloads</string>
    <string name="cache_summary">Automatically download song after playing.</string>
    <string name="website">Website</string>
    <string name="search_history">Search history</string>
    <string name="version_check">Updates</string>
    <string name="version_summary">Check for new update.</string>
    <string name="version_newest">Up To Date</string>
    <string name="version_newest_summary">You have the latest version of YouPlay installed.</string>
    <string name="about">About</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_focus_mode">Audio Focus</string>
    <string name="pref_focus_summary">don\'t continue playing after interruptions (e.g. Phone call, Facebook video etc.)</string>
    <string name="apprater_dialog_title">Rate %s</string>
    <string name="apprater_rate_message">If you enjoy using this app, please take a moment to rate it. Thanks for your support!</string>
    <string name="apprater_rate">Rate Now</string>
    <string name="apprater_later">Later</string>
    <string name="apprater_no_thanks">No thanks</string>

    <string name="version_update">New Version Available</string>
    <string name="version_update_summary">A new version of YouPlay is available. Version %s will be installed.</string>
    <string name="update">Update</string>
    <string name="downloading">Downloading</string>
    <string name="download_update_error">An error has occurred while trying to download an update.</string>
    <string name="download_error">An error has ouccurred, check if there is internet connection</string>
    <string name="shuffle">Shuffle</string>
    <string name="comment_no_result">An error has ouccurred</string>
    <string name="short_thousand">k</string>
    <string name="short_million">M</string>
    <string name="short_billion">B</string>
    <plurals name="weeks">
        <item quantity="one">%d week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="songs">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>

    <!--Config-->
    <string name="config_changed">Configuration changed, restart the application</string>

    <!--Playlist table dialog-->
    <string-array name="you_playlist_table_dialog">
        <item>@string/now_playing</item>
        <item>@string/delete_song</item>
    </string-array>
    <!--Radio dialog-->
    <string-array name="you_radio_dialog">
        <item>@string/now_playing</item>
        <item>@string/delete_radio</item>
    </string-array>
    <!--Search fragment itemi-->
    <string-array name="you_search_dialog">
        <item>@string/now_playing</item>
        <item>@string/open_youtube</item>
    </string-array>
    <!--History dialog-->
    <string-array name="you_history_dialog">
        <item>@string/now_playing</item>
        <item>@string/add_queue</item>
        <item>@string/add_to_playlist</item>
        <item>@string/open_youtube</item>
        <item>@string/delete_song</item>
    </string-array>
    <!--PopupMenu text-->
    <string name="cache_mode">Cache mode</string>
    <string name="order_latest">Order by latest</string>
    <string name="order_oldest">Order by oldest</string>
    <!--Playlist dialog-->
    <string-array name="you_playlist_dialog">
        <item>@string/playlist_delete</item>
        <item>@string/playlist_rename</item>
    </string-array>

    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

</resources>
