<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_appearance">
        <SwitchPreference
            android:id="@+id/switch_pref"
            android:key="@string/switch_key"
            android:defaultValue="false"
            android:fontFamily="sans-serif-light"
            android:summary="@string/switch_summary"
            android:title="@string/switch_theme"/>

        <SwitchPreference
            android:id="@+id/navigation"
            android:key="navigation"
            android:defaultValue="false"
            android:fontFamily="sans-serif-light"
            android:summary="@string/pref_navigation_summary"
            android:title="@string/pref_navigation"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_download">
        <CheckBoxPreference
            android:id="@+id/faster_download"
            android:key="@string/check_download"
            android:defaultValue="false"
            android:fontFamily="sans-serif-light"
            android:summary="@string/check_download_desc"
            android:title="@string/check_download_title"/>

        <CheckBoxPreference
            android:id="@+id/cache_mode"
            android:key="cache_mode"
            android:defaultValue="true"
            android:title="@string/cache_mode"
            android:summary="@string/cache_summary">

        </CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_sound">

        <CheckBoxPreference
            android:key="sound_mode"
            android:defaultValue="false"
            android:title="@string/pref_focus_mode"
            android:summary="@string/pref_focus_summary"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/about">
        <PreferenceScreen
            android:key="@string/current_version"
            android:title="@string/current_version"/>

        <PreferenceScreen
            android:key="version_check"
            android:title="@string/version_check"
            android:summary="@string/version_summary"/>

        <PreferenceScreen
            android:key="website"
            android:title="@string/website"
            android:summary="https://youplayandroid.com/"/>

        <PreferenceScreen
            android:key="contribute"
            android:title="@string/contribute"
            android:summary="@string/contribute_summary"/>

        <PreferenceScreen
            android:key="send_email"
            android:title="@string/send_email"
            android:summary="stipess@youplayandroid.com"/>

    </PreferenceCategory>

</PreferenceScreen>